// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddEditBedType Should display add edit bed type form properly 1`] = `
<div
  className="form-container"
>
  <fieldset
    className="bed-type-form"
  >
    <legend>
        
      Add
       Bed Type  
    </legend>
    <div
      className="block-content"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Name:
          </label>
          <input
            id="name-field"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Display Name:
          </label>
          <input
            id="display-name-field"
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Description:
          </label>
          <textarea
            id="description-field"
            onChange={[Function]}
            value=""
          />
        </div>
        <div
          className="form-block"
        >
          <input
            className="form-btn float-left margin-right"
            disabled={false}
            name="submit"
            type="submit"
            value="Save"
          />
          <input
            className="form-btn float-left"
            name="cancel"
            onClick={[Function]}
            type="button"
            value="Cancel"
          />
        </div>
      </form>
    </div>
  </fieldset>
</div>
`;

exports[`AddEditBedType Should display add edit bed type form properly 2`] = `
<div
  className="form-container"
>
  <fieldset
    className="bed-type-form"
  >
    <legend>
        
      Edit
       Bed Type  
    </legend>
    <div
      className="block-content"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Name:
          </label>
          <input
            id="name-field"
            onChange={[Function]}
            required={true}
            type="text"
            value="luxury"
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Display Name:
          </label>
          <input
            id="display-name-field"
            onChange={[Function]}
            required={true}
            type="text"
            value="luxury bed"
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Description:
          </label>
          <textarea
            id="description-field"
            onChange={[Function]}
            value="LXY"
          />
        </div>
        <div
          className="form-block"
        >
          <input
            className="form-btn float-left margin-right"
            disabled={false}
            name="submit"
            type="submit"
            value="Save"
          />
          <input
            className="form-btn float-left"
            name="cancel"
            onClick={[Function]}
            type="button"
            value="Cancel"
          />
        </div>
      </form>
    </div>
  </fieldset>
</div>
`;
